[gd_scene load_steps=9 format=3 uid="uid://eh3fkvk20db4"]

[ext_resource type="Script" uid="uid://dkt4rf6vrey6c" path="res://src/premades/actuator_push.gd" id="1_q2nw1"]
[ext_resource type="PackedScene" uid="uid://cd4682f5x7cop" path="res://src/utility/communication/plc_tag.tscn" id="2_yin2o"]

[sub_resource type="BoxMesh" id="BoxMesh_twq8d"]
size = Vector3(0.2, 0.3, 1.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_twq8d"]
size = Vector3(0.2, 0.3, 1.2)

[sub_resource type="BoxMesh" id="BoxMesh_jft6k"]
size = Vector3(0.05, 0.05, 1)

[sub_resource type="BoxMesh" id="BoxMesh_yin2o"]
size = Vector3(0.2, 0.2, 0.025)

[sub_resource type="BoxShape3D" id="BoxShape3D_0ywg0"]
size = Vector3(0.05, 0.05, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_mhxqt"]
size = Vector3(0.2, 0.2, 0.025)

[node name="ActuatorPush" type="StaticBody3D"]
script = ExtResource("1_q2nw1")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.6)
mesh = SubResource("BoxMesh_twq8d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.6)
shape = SubResource("BoxShape3D_twq8d")
disabled = true

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="."]

[node name="Arm" type="MeshInstance3D" parent="AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
mesh = SubResource("BoxMesh_jft6k")

[node name="EndPlate" type="MeshInstance3D" parent="AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.013)
mesh = SubResource("BoxMesh_yin2o")

[node name="CollisionArm" type="CollisionShape3D" parent="AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("BoxShape3D_0ywg0")

[node name="CollisionEnd" type="CollisionShape3D" parent="AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.013)
shape = SubResource("BoxShape3D_mhxqt")

[node name="PLCTagExtend" parent="." instance=ExtResource("2_yin2o")]
memoryArea = 131
offset = 10
bit = 6

[node name="PLCTagLimitMax" parent="." instance=ExtResource("2_yin2o")]
memoryArea = 131
offset = 10
bit = 7

[node name="PLCTagLimitMin" parent="." instance=ExtResource("2_yin2o")]
memoryArea = 131
offset = 11
